# sicontrol

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
.github/workflows/src/model/: MixerModel.h
SiControl (2)/SiControl/android/: AndroidManifest.xml
SiControl (2)/SiControl/qml/: Theme.qml
SiControl (2)/SiControl/qml/controls/: ViSiFader.qml
SiControl (2)/SiControl/qml/views/: DeviceSelectView.qml  MuteGroupsView.qml
SiControl (2)/SiControl/src/: main.cpp
SiControl (2)/SiControl/src/hiqnet/: HiQnetTypes.h
android/: build.gradle
android/src/com/sicontrol/app/: NetworkService.kt
qml/: Main.qml
qml/controls/: EqGraph.qml  PanControl.qml  RotaryKnob.qml
qml/js/: EqMath.js
qml/views/: BusSelectView.qml  ChannelStripView.qml  MatrixView.qml  MixView.qml  SettingsView.qml
src/hiqnet/: HiQnetClient.h  HiQnetCodec.h  StateVarCatalog.h
src/model/: Channel.h  ParameterMap.h
src/platform/: AndroidBridge.cpp
